2021-07-18 Dusan Jocic <dusanjocic@msn.com>
	* [RenderSystem] Misc fixes
	* [Mac] Some work to get Macintosh build fixed
	* [Mac] More work for Macintosh build

2021-07-04 Dusan Jocic <dusanjocic@msn.com>
	* [Misc] Misc changes
	* [Filesystem] Introduced "fs_texturesfolder", "fs_soundsFolder" and "fs_modelsFolder"
	* [Misc] Misc changes
	* [RenderSystem] Fixed external lightmaps

2021-06-14 Dusan Jocic <dusanjocic@msn.com>
	* [Engine] Renderer dynamic module should have dot (.) before arch
	* [Engine] Early out of idCmdSystemLocal::CompleteArgument and idCmdSystemLocal::SetCommandCompletionFunc
	* [Engine] Fixed few memory leaks
	* [Engine] Reworked console key detection to use the sdl scancode instead of the keycode

2021-06-13 Dusan Jocic <dusanjocic@msn.com>
	* [RenderSystem] Fixed blended of texture detail
	* [RenderSystem] Fixed problems with parallax
	* [RenderSystem] Fixed problems with Sun rays
	* [Misc] Misc changes

2021-06-06 Dusan Jocic <dusanjocic@msn.com>
	* [Misc] Misc changes

2021-06-01 Dusan Jocic <dusanjocic@msn>
	* [Linux] Fixed compiling on the Linux platform
	* [GLSL] Misc fixes
    
2021-05-30 Dusan Jocic <dusanjocic@msn>
	* [Server] Fixed crash

2021-05-23 Dusan Jocic <dusanjocic@msn>
    * [Linux] Fixed compiling on the Linux platform
	* [Engine] Moved memory system to C++ file
	* [RenderSystem] Moved renderer system to dynamic module
	* [Engine] Synced with the gamelogic repository
	* [Misc] Misc changes
	* [Engine] Fixed compiling on the Windows platform
    
2021-05-21 Dusan Jocic <dusanjocic@msn>
	* [Client] Moved client main in several C++ files

2021-05-20 Dusan Jocic <dusanjocic@msn>
	* [Client] Moved client keys into C++ file
	* [Steamworks] Added initial files for the future Valve Steamworks engine integration
	* [RenderSystem] Added initial files for the future idTech2 (BSP version 38) integration

2021-05-19 Dusan Jocic <dusanjocic@msn>
	* [Client] Moved client console into C++ file
	* [Filesystem] Don't expose whole filesystem