@@ -3795,10 +3795,12 @@ void idFileSystemLocal::Startup(pointer gameName) {
     // fs_homepath is somewhat particular to *nix systems, only add if relevant
 
 #if defined (__MACOSX__)
+
     // Make MacOSX also include the base path included with the .app bundle
     if(fs_apppath->string[0]) {
         AddGameDirectory(fs_apppath->string, gameName);
     }
+
 #endif
 
     // NOTE: same filtering below for mods and basegame
