@@ -82,15 +82,15 @@ pointer idSystemLocal::TempPath(void) {
     } else {
         return TMPDIR;
     }
+
 #else
     static UInt8 posixPath[MAX_OSPATH];
     FSRef ref;
-    if (FSFindFolder(kOnAppropriateDisk,
-        kTemporaryFolderType, kCreateFolder, &ref) == noErr)
-    {
-        if (FSRefMakePath(&ref, posixPath,
-            sizeof(posixPath) - 1) == noErr)
-        {
+
+    if(FSFindFolder(kOnAppropriateDisk,
+                    kTemporaryFolderType, kCreateFolder, &ref) == noErr) {
+        if(FSRefMakePath(&ref, posixPath,
+                         sizeof(posixPath) - 1) == noErr) {
             return (pointer)posixPath;
         }
     }
@@ -208,14 +208,14 @@ valueType *idSystemLocal::SysGetClipboardData(void) {
 
         SDL_free(cliptext);
     }
+
 #endif
 #if defined (__MACOSX__)
-    FILE* pipe = popen("pbpaste", "r");
+    FILE *pipe = popen("pbpaste", "r");
     valueType buffer[MAX_EDIT_LINE];
-    valueType* data = NULL;
+    valueType *data = NULL;
 
-    if (!pipe)
-    {
+    if(!pipe) {
         return nullptr;
     }
 
@@ -788,53 +788,56 @@ dialogResult_t idSystemLocal::Dialog(dialogType_t type, pointer message,
     return DR_OK;
 #else
     dialogResult_t result = DR_OK;
-    NSAlert* alert = [NSAlert new];
+    NSAlert *alert = [NSAlert new];
 
     [alert setMessageText : [NSString stringWithUTF8String : title] ] ;
     [alert setInformativeText : [NSString stringWithUTF8String : message] ] ;
 
-    if (type == DT_ERROR)
+    if(type == DT_ERROR) {
         [alert setAlertStyle : NSCriticalAlertStyle];
-    else
+    } else {
         [alert setAlertStyle : NSWarningAlertStyle];
+    }
 
-    switch (type)
-    {
-    default:
-        [alert runModal] ;
-        result = DR_OK;
-        break;
-
-    case DT_YES_NO:
-        [alert addButtonWithTitle : @"Yes"] ;
-        [alert addButtonWithTitle : @"No"] ;
-        switch ([alert runModal])
-        {
+    switch(type) {
         default:
-        case NSAlertFirstButtonReturn:
-            result = DR_YES;
-            break;
-        case NSAlertSecondButtonReturn:
-            result = DR_NO;
-            break;
-        }
-        break;
-
-    case DT_OK_CANCEL:
-        [alert addButtonWithTitle : @"OK"] ;
-        [alert addButtonWithTitle : @"Cancel"] ;
-
-        switch ([alert runModal])
-        {
-        default:
-        case NSAlertFirstButtonReturn:
+            [alert runModal] ;
             result = DR_OK;
             break;
-        case NSAlertSecondButtonReturn:
-            result = DR_CANCEL;
+
+        case DT_YES_NO:
+            [alert addButtonWithTitle : @"Yes"] ;
+            [alert addButtonWithTitle : @"No"] ;
+
+            switch([alert runModal]) {
+                default:
+                case NSAlertFirstButtonReturn:
+                    result = DR_YES;
+                    break;
+
+                case NSAlertSecondButtonReturn:
+                    result = DR_NO;
+                    break;
+            }
+
             break;
-        }
-        break;
+
+        case DT_OK_CANCEL:
+            [alert addButtonWithTitle : @"OK"] ;
+            [alert addButtonWithTitle : @"Cancel"] ;
+
+            switch([alert runModal]) {
+                default:
+                case NSAlertFirstButtonReturn:
+                    result = DR_OK;
+                    break;
+
+                case NSAlertSecondButtonReturn:
+                    result = DR_CANCEL;
+                    break;
+            }
+
+            break;
     }
 
     [alert release] ;
