@@ -478,6 +478,8 @@ typedef struct shader_s {
     bool    isPortal;
     sint materialType;
 
+    vec4_t distanceCull;                // opaque alpha range for foliage (inner, outer, alpha threshold, 1/(outer-inner))
+
     cullType_t
     cullType;               // CT_FRONT_SIDED, CT_BACK_SIDED, or CT_TWO_SIDED
     bool    polygonOffset;          // set for decals and other items that must be offset
@@ -891,6 +893,7 @@ enum surfaceType_t {
     SF_FACE,
     SF_GRID,
     SF_TRIANGLES,
+    SF_FOLIAGE,
     SF_POLY,
     SF_MDV,
     SF_MDR,
@@ -987,6 +990,33 @@ typedef struct srfBspSurface_s {
     float32            *widthLodError;
     float32            *heightLodError;
 } srfBspSurface_t;
+
+// foliage surfaces are autogenerated from models into geometry lists by q3map2
+typedef struct {
+    vec3_t origin;
+    uchar16 color[4];
+} foliageInstance_t;
+
+typedef struct {
+    surfaceType_t   surfaceType;
+
+    // dynamic lighting information
+    sint             dlightBits;
+    sint             pshadowBits;
+
+    sint             numIndexes;
+    uint *indexes;
+
+    sint             numVerts;
+    srfVert_t *verts;
+
+    vec3_t          origin;
+    float32           radius;
+
+    // origins
+    sint             numInstances;
+    foliageInstance_t *instances;
+} srfFoliage_t;
 
 typedef struct {
     vec3_t translate;
